// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile as huge 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 22;
  line-height: 22px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      >
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile as medium 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 18;
  line-height: 18px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      >
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;

exports[`tile as wide 1`] = `
<style>
.IS1 {
  margin-bottom: 10px;
  width: 100%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5;
  font-size: 20;
  line-height: 20px;
}

.IS4 {
  color: inherit;
  font: inherit;
  white-space: inherit;
}

.IS5 {
  color: #696969;
  flex-wrap: wrap;
  margin-bottom: 10px;
  font-family: TimesDigitalW04;
  font-size: 14;
  line-height: 20px;
  margin-top: 5;
}

.IS6 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
      "paddingLeft": "10px",
      "paddingRight": "10px",
      "paddingTop": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS1"
  >
    <Image
      aspectRatio={1.5}
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=2688%2C1792%2C0%2C0"
    />
  </div>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
    >
      <ArticleLabel
        color="#005B8D"
        isVideo={false}
        title="label"
      />
    </div>
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
      role="heading"
    >
      This is tile headline
    </div>
    <div
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS5"
    >
      <div
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
      >
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </div>
    </div>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </div>
</Link>
`;
